objects/ssot__CareProgramEnrollee__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__AccountId__c</fullName>
        <label>Account</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CareProgramEnrolleeStatus__c</fullName>
        <label>Care Program Enrollee Status</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CareProgramId__c</fullName>
        <label>Care Program</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CurrentGroupId__c</fullName>
        <label>Current Group</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CurrentGroupObject__c</fullName>
        <label>Current Group Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__EnrollmentLocationId__c</fullName>
        <label>Enrollment Location</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Care Program Enrollee Id</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IsPatientInLtrmCareFacility__c</fullName>
        <label>Is Patient in Long Term Care Facility</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__LeadId__c</fullName>
        <label>Lead</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__OptOutPeriodEndDateTime__c</fullName>
        <label>Opt Out Period End  DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__OptOutPeriodStartDateTime__c</fullName>
        <label>Opt Out Period Start  DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__OptOutReasonType__c</fullName>
        <label>Opt Out Reason Type</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PatientId__c</fullName>
        <label>Patient</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__RecommendedGroupId__c</fullName>
        <label>Recommended Group</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__RecommendedGroupObjectName__c</fullName>
        <label>Recommended Group Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ResearchStudyCandidateId__c</fullName>
        <label>Research Study Candidate</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__UserId__c</fullName>
        <label>User</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1716726238625_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CareProgramEnrollee_CareProgramId_ma_rel</label>
        <referenceTo>ssot__CareProgram__dlm</referenceTo>
        <relationshipLabel>CareProgramEnrollee_CareProgramId_ma_rel</relationshipLabel>
        <relationshipName>rel_1716726238625_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1716726259401_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CareProgramEnrollee_PatientId_map_Pa_rel</label>
        <referenceTo>ssot__Patient__dlm</referenceTo>
        <relationshipLabel>CareProgramEnrollee_PatientId_map_Pa_rel</relationshipLabel>
        <relationshipName>rel_1716726259401_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1716726261795_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CareProgramEnrollee_UserId_map_User__rel</label>
        <referenceTo>ssot__User__dlm</referenceTo>
        <relationshipLabel>CareProgramEnrollee_UserId_map_User__rel</relationshipLabel>
        <relationshipName>rel_1716726261795_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>